# roboqueue

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: airmass-plot.ipynb  brute-force.ipynb  rl-training.ipynb  simulator.ipynb
roboqueue/: __init__.py  airmass.py  altaz.py  conditions.py  expcal.py  gymwrapper.py  movingtarget.py  stationarytarget.py  targetlist.py  telescope.py
roboqueue.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
