[build-system]
requires = ["setuptools >= 59.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roboqueue"
version = "0.0.0-alpha.0"
description = "A Python Package for Solar System Ephemerides and Dynamics."
# license = "GPL-3.0"
readme = "README.md"
# repository = "https://github.com/kjnapier/spacerocks"

[tool.setuptools]
packages = ["roboqueue"]